@@ -1,8 +1,6 @@
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
-val protobuf: String by System.getProperties()
-val tcnative: String by System.getProperties()
-val netty: String by System.getProperties()
+val flink: String by System.getProperties()
 
 plugins {
   application
@@ -10,30 +8,9 @@ plugins {
 }
 
 application {
-  mainClass.set("org.github.ChatServerKt")
+  mainClass.set("flink")
   applicationDefaultJvmArgs = listOf(
-    "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006",
-
-    "-ea",
-
-    "-Dio.netty.tryReflectionSetAccessible=true",
-    "-Dio.netty.leakDetection.level=advanced",
-    "-Djava.net.preferIPv4Stack=true",
-
-    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.math=ALL-UNNAMED",
-    "--add-opens=java.base/java.text=ALL-UNNAMED",
-    "--add-opens=java.base/java.time=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-
-    "--illegal-access=deny"
+    "-ea"
   )
 }
 
@@ -45,37 +22,18 @@ tasks.getByName<Task>("shadowDistTar") {enabled = false}
 tasks.getByName<Task>("shadowDistZip") {enabled = false}
 
 tasks.withType<ShadowJar> {
-  archiveFileName.set("netty-boot.jar")
+  archiveFileName.set("flink-boot.jar")
 }
 
 tasks.withType<Test> {
   jvmArgs = listOf(
-    "-ea",
-
-    "-Dio.netty.tryReflectionSetAccessible=true",
-    "-Dio.netty.leakDetection.level=paranoid",
-    "-Djava.net.preferIPv4Stack=true",
-
-    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.math=ALL-UNNAMED",
-    "--add-opens=java.base/java.text=ALL-UNNAMED",
-    "--add-opens=java.base/java.time=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-
-    "--illegal-access=deny"
+    "-ea"
   )
 }
 
 dependencies {
-  implementation("com.google.protobuf:protobuf-java-util:$protobuf")
-  implementation("io.netty:netty-tcnative-boringssl-static:$tcnative")
-  implementation("io.netty:netty-all:$netty")
-  implementation(project(":sub-system-core"))
+  compileOnly("org.apache.flink:flink-java:$flink")
+  compileOnly("org.apache.flink:flink-clients_2.12:$flink")
+  compileOnly("org.apache.flink:flink-streaming-java_2.12:$flink")
+  testImplementation("org.apache.flink:flink-runtime-web_2.12:$flink")
 }
